fixed parent container's overflow

--- a/mirror.css
+++ b/mirror.css
@@ -1,5 +1,6 @@
 section {
   display: flex;
+  overflow-wrap: break-word;
 }
 
 #article1 {
